kubernetes/_base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo
spec:
  ports:
  - name: server-port
    port: 5000
    targetPort: 5000
  selector:
    app: demo
  sessionAffinity: None
  type: ClusterIP
