kubernetes/_base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  labels:
    app: demo
spec:
  defaultBackend:
    service:
      name: demo
      port:
        number: 5000
  # rules:
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: demo
  #           port:
  #             number: 5000
